hphp/hack/test/typecheck/global_const18.php
<?hh

const mixed X = "$x";
